# python-template

./: Makefile  README.md  pyproject.toml
.github/workflows/: cicd.yaml  python-make-target.yaml
mjv_template/: cli.py
quality/: format  lint
